update present demo

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -36,7 +36,7 @@
             <span class="menu-item">driverdata </span>
         </div>
 
-        <div *ngIf="true" (click)="openPage('vehicle')" class="clickable-div">
+        <div *ngIf="false" (click)="openPage('vehicle')" class="clickable-div">
             <mat-icon style="margin-right: 20px; color: #b3e5fc;">menu</mat-icon>
             <span class="menu-item">vehicle </span>
         </div>
@@ -52,7 +52,7 @@
             <mat-icon style="margin-right: 20px; color: #b3e5fc;">menu</mat-icon>
             <span class="menu-item"> companydata </span>
         </div>
-        <div *ngIf="true" (click)="openPage('route')"  class="clickable-div">
+        <div *ngIf="false" (click)="openPage('route')"  class="clickable-div">
             <mat-icon style="margin-right: 20px; color: #b3e5fc;">menu</mat-icon>
             <span class="menu-item">route </span>
         </div>
@@ -80,7 +80,7 @@
         </div>
 
 
-        <div *ngIf="true" (click)="openPage('confirmjob')"  class="clickable-div">
+        <div *ngIf="false" (click)="openPage('confirmjob')"  class="clickable-div">
             <mat-icon style="margin-right: 20px; color: #b3e5fc;">menu</mat-icon>
             <span class="menu-item"> daily job </span>
         </div>
@@ -96,7 +96,7 @@
             <mat-icon style="margin-right: 20px; color: #b3e5fc;">menu</mat-icon>
             <span class="menu-item"> planactivedata </span>
         </div>
-        <div *ngIf="true" (click)="openPage('planmaster')"  class="clickable-div">
+        <div *ngIf="false" (click)="openPage('planmaster')"  class="clickable-div">
             <mat-icon style="margin-right: 20px; color: #b3e5fc;">menu</mat-icon>
             <span class="menu-item"> Master plan </span>
         </div>
@@ -104,7 +104,7 @@
             <mat-icon style="margin-right: 20px; color: #b3e5fc;">menu</mat-icon>
             <span class="menu-item"> planmasterdata </span>
         </div>
-        <div *ngIf="true" (click)="openPage('plan')"  class="clickable-div">
+        <div *ngIf="false" (click)="openPage('plan')"  class="clickable-div">
             <mat-icon style="margin-right: 20px; color: #b3e5fc;">menu</mat-icon>
             <span class="menu-item">plan </span>
         </div>
