--- a/src/app/page/Dashboard/maindashboardpage/maindashboardpage.component.html
+++ b/src/app/page/Dashboard/maindashboardpage/maindashboardpage.component.html
@@ -136,12 +136,14 @@
                                     (dblclick)="showdiverwork(driver,comp,driverdetailmodal)" (click)="showdriverposition(driver)">
                                         <div class="col-6 " 
                                             mat-raised-button  
-                                            matTooltip={{driver.routename}}&nbsp;&nbsp;{{driver.fullname}}&nbsp;&nbsp;{{driver.vlicent}}>
+                                            matTooltip={{driver.fullname}}&nbsp;&nbsp;{{driver.routename}}&nbsp;&nbsp;>
                                             <div class="justify-content-center">
                                                 <img [src]="driver.lineimage ==''? va.icon.user : driver.lineimage"
                                                     class="driverimg">
                                             </div>
-                                            <div class="d-flex justify-content-center " style="font-size: xx-small;width:5vh; max-height:2vh; overflow: hidden;">
+                                            <div class="d-flex justify-content-center " [style.background-color]="driver.vstatuscorlor"
+                                                mat-raised-button matTooltip={{driver.vlicent}}&nbsp;&nbsp;{{driver.vstatusname}}&nbsp;&nbsp;{{driver.vlocation}}
+                                                style="font-size: xx-small;width:5vh; max-height:2vh; overflow: hidden;">
                                                 {{driver.vname}}
                                             </div>
                                         </div>
@@ -185,12 +187,14 @@
                                             <div class="row" *ngIf="comp.showgroup[0]"
                                             (dblclick)="showdiverwork(driver,comp,driverdetailmodal)"(click)="showdriverposition(driver)">
                                                 <div class="col-6 " mat-raised-button
-                                                    matTooltip={{driver.routename}}&nbsp;&nbsp;{{driver.fullname}}&nbsp;&nbsp;{{driver.vlicent}}>
+                                                    matTooltip={{driver.fullname}}&nbsp;&nbsp;{{driver.routename}}&nbsp;&nbsp;>
                                                     <div class="justify-content-center">
                                                         <img [src]="driver.lineimage ==''? va.icon.user : driver.lineimage"
                                                             class="driverimg">
                                                     </div>
-                                                    <div class="d-flex justify-content-center " style="font-size: xx-small;width:5vh; max-height:2vh; overflow: hidden;">
+                                                    <div class="d-flex justify-content-center " [style.background-color]="driver.vstatuscorlor"
+                                                    mat-raised-button matTooltip={{driver.vlicent}}&nbsp;&nbsp;{{driver.vstatusname}}&nbsp;&nbsp;{{driver.vlocation}}
+                                                    style="font-size: xx-small;width:5vh; max-height:2vh; overflow: hidden;">
                                                         {{driver.vname}}
                                                     </div>
                                                 </div>
@@ -236,12 +240,14 @@
                                         <div class="row" *ngIf="comp.showgroup[1]"
                                             (dblclick)="showdiverwork(driver,comp,driverdetailmodal)"(click)="showdriverposition(driver)">
                                             <div class="col-6 " mat-raised-button
-                                                matTooltip={{driver.routename}}&nbsp;&nbsp;{{driver.fullname}}&nbsp;&nbsp;{{driver.vlicent}}>
+                                                    matTooltip={{driver.fullname}}&nbsp;&nbsp;{{driver.routename}}&nbsp;&nbsp;>
                                                 <div class="justify-content-center">
                                                     <img [src]="driver.lineimage ==''? va.icon.user : driver.lineimage"
                                                         class="driverimg">
                                                 </div>
-                                                <div class="d-flex justify-content-center " style="font-size: xx-small;width:5vh; max-height:2vh; overflow: hidden;">
+                                                <div class="d-flex justify-content-center " [style.background-color]="driver.vstatuscorlor"
+                                                mat-raised-button matTooltip={{driver.vlicent}}&nbsp;&nbsp;{{driver.vstatusname}}&nbsp;&nbsp;{{driver.vlocation}}
+                                                style="font-size: xx-small;width:5vh; max-height:2vh; overflow: hidden;">
                                                     {{driver.vname}}
                                                 </div>
                                             </div>
@@ -290,12 +296,14 @@
                                         <div class="row" *ngIf="comp.showgroup[2]"
                                             (dblclick)="showdiverwork(driver,comp,driverdetailmodal)"(click)="showdriverposition(driver)">
                                             <div class="col-6 " mat-raised-button
-                                                matTooltip={{driver.routename}}&nbsp;&nbsp;{{driver.fullname}}&nbsp;&nbsp;{{driver.vlicent}}>
+                                                    matTooltip={{driver.fullname}}&nbsp;&nbsp;{{driver.routename}}&nbsp;&nbsp;>
                                                 <div class="justify-content-center">
                                                     <img [src]="driver.lineimage ==''? va.icon.user : driver.lineimage"
                                                         class="driverimg">
                                                 </div>
-                                                <div class="d-flex justify-content-center " style="font-size: xx-small;width:5vh; max-height:2vh; overflow: hidden;">
+                                                <div class="d-flex justify-content-center " [style.background-color]="driver.vstatuscorlor"
+                                                mat-raised-button matTooltip={{driver.vlicent}}&nbsp;&nbsp;{{driver.vstatusname}}&nbsp;&nbsp;{{driver.vlocation}}
+                                                style="font-size: xx-small;width:5vh; max-height:2vh; overflow: hidden;">
                                                     {{driver.vname}}
                                                 </div>
                                             </div>
@@ -344,12 +352,14 @@
                                         <div class="row" *ngIf="comp.showgroup[3]"
                                             (dblclick)="showdiverwork(driver,comp,driverdetailmodal)"(click)="showdriverposition(driver)">
                                             <div class="col-6 " mat-raised-button
-                                                matTooltip={{driver.routename}}&nbsp;&nbsp;{{driver.fullname}}&nbsp;&nbsp;{{driver.vlicent}}>
+                                                       matTooltip={{driver.routename}}&nbsp;&nbsp;{{driver.fullname}}&nbsp;&nbsp;{{driver.vlicent}}>
                                                 <div class="justify-content-center">
                                                     <img [src]="driver.lineimage ==''? va.icon.user : driver.lineimage"
                                                         class="driverimg">
                                                 </div>
-                                                <div class="d-flex justify-content-center " style="font-size: xx-small;width:5vh; max-height:2vh; overflow: hidden;">
+                                                <div class="d-flex justify-content-center " [style.background-color]="driver.vstatuscorlor"
+                                                mat-raised-button matTooltip={{driver.vlicent}}&nbsp;&nbsp;{{driver.vstatusname}}&nbsp;&nbsp;{{driver.vlocation}}
+                                                style="font-size: xx-small;width:5vh; max-height:2vh; overflow: hidden;">
                                                     {{driver.vname}}
                                                 </div>
                                             </div>
@@ -397,12 +407,14 @@
                                         <div class="row" *ngIf="comp.showgroup[4]"
                                         (dblclick)="showdiverwork(driver,comp,driverdetailmodal)"(click)="showdriverposition(driver)">
                                             <div class="col-6 " mat-raised-button
-                                                matTooltip={{driver.routename}}&nbsp;&nbsp;{{driver.fullname}}&nbsp;&nbsp;{{driver.vlicent}}>
+                                                    matTooltip={{driver.fullname}}&nbsp;&nbsp;{{driver.routename}}&nbsp;&nbsp;>
                                                 <div class="justify-content-center">
                                                     <img [src]="driver.lineimage ==''? va.icon.user : driver.lineimage"
                                                         class="driverimg">
                                                 </div>
-                                                <div class="d-flex justify-content-center " style="font-size: xx-small;width:5vh; max-height:2vh; overflow: hidden;">
+                                                <div class="d-flex justify-content-center " [style.background-color]="driver.vstatuscorlor"
+                                                mat-raised-button matTooltip={{driver.vlicent}}&nbsp;&nbsp;{{driver.vstatusname}}&nbsp;&nbsp;{{driver.vlocation}}
+                                                style="font-size: xx-small;width:5vh; max-height:2vh; overflow: hidden;">
                                                     {{driver.vname}}
                                                 </div>
                                             </div>
@@ -473,7 +485,19 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="row" style="width:100%;height:2px; background-color: whitesmoke; margin: 5px" ></div>
+
+                                <!-- Vehicle status -->
+                                <div class="container" style="display: flex; justify-content: space-between; align-items: center; width:100%; margin: 5px;"
+                                        mat-raised-button matTooltip={{driver.vlicent}}&nbsp;&nbsp;{{driver.vstatusname}}&nbsp;&nbsp;{{driver.vlocation}}
+                                        [style.background-color]="driver.vstatuscorlor">
+                                    <div class="col" style="flex: 0 0 auto;">
+                                        <mat-icon style="width: auto; color: white;" >departure_board</mat-icon>
+                                        <span  style="color: white;" >{{driver.vname}} | {{driver.vlicent}}</span>
+                                    </div>
+                                    <div class="col" style="flex: 0 0 auto;">
+                                        <span style="color: white;"> {{driver.vspeed}} Km.h {{driver.vlocation}}</span>
+                                    </div>
+                                </div>
                             </div>
                     </div>
 
